# pets

./: Dockerfile  README.md
.github/workflows/: server.yml
pets-app/Assets/1. ImplementationTask1/PetGameScripts/: ProgressBarController.cs
pets-app/Assets/1. ImplementationTask1/Scripts/: PlaceOnPlane.cs
pets-app/Assets/1. ImplementationTask1/Scripts/UX/: ARSceneSelectUI.cs  BackButton.cs
pets-app/Assets/1. ImplementationTask1/UIScripts/: AnimalController.cs  ProgressBar.cs
pets-app/Assets/1. ImplementationTaskOne/UIScripts/: OpenJoystick.cs  PlayWIthAnimal.cs  QuitNotifyOpen.cs  UpdateSize.cs
pets-app/Assets/1. ImplementationTaskOne/XR/Settings/: OpenXR Package Settings.asset
pets-app/Assets/10.ExternalFolder/Fox/Animations/: FoxAnimator.controller
pets-app/Assets/10.ExternalFolder/Fox/Prefabs/: Fox Variant.prefab
pets-app/Assets/10.ExternalFolder/New UI Widgets/: changelog.txt  readme.txt
pets-app/Assets/10.ExternalFolder/New UI Widgets/Editor/: AssemblyDefinitionsEditor.cs  ButtonCustomEditor.cs  ContextMenuEditor.cs  ContextMenuWindow.cs  CursorsMenuOptions.cs  LayoutSwitcherEditor.cs  ListViewPaginatorEditor.cs  MenuOptions.cs  OrderedEditor.cs  ProgressbarEditor.cs  ProjectSettings.cs  (+8 more)
pets-app/Assets/2.ImplementationTask2/LoginScene/: StartMenu.unity
pets-app/Assets/2.ImplementationTask2/SocialStanding/: SocialStandingSccene.unity
pets-app/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
pets-server/: Cargo.toml
pets-server/src/: graphql.rs  handlers.rs  main.rs  routes.rs  schema.rs
pets-server/src/db/: schema.rs
(+629 files in other folders)
